# lonk

./: .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
data/: config.json
data/served/: index.html  main.css  main.js
src/: main.rs
