[package]
name = "lonk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.13.0"
either = "1.6.1"
figment = { version = "0.10.6", features = ["toml", "env"] }
rusqlite = "0.27.0"
serde = { version = "~1.0.136", features = ["derive"] }
tokio = { version = "~1.17.0", features = ["full"] }
validators = { version = "~0.24.1", features = ["url-dep"] }
warp = "0.3.2"
