[package]
name = "lonk"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argh = "~0.1.7"
async-object-pool = "~0.1.4"
base64 = "~0.13.0"
rand = "~0.8.5"
redis = { version = "~0.21.5", features = ["tokio-native-tls-comp"] }
serde = { version = "~1.0.136", features = ["derive"] }
serde_json = "1.0.79"
tokio = { version = "~1.17.0", features = ["full"] }
validators = { version = "~0.24.1", features = ["url-dep"] }
warp = "~0.3.2"
